--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "firebase": "^9.10.0",
     "vue": "^2.7.10",
