--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.10.0",
     "vue": "^2.7.10",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
