--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "bootstrap-vue": "^2.22.0",
-    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.0",
     "firebase": "^9.10.0",
     "vue": "^2.7.10",
-    "vue-chartjs": "^4.1.2",
+    "vue-echarts": "^6.2.3",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
