--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.7.10",
     "vue-chartjs": "^4.1.2",
     "vue-router": "^3.5.1",
+    "vuewordcloud": "^18.7.12",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
